--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,9 +15,14 @@ jobs:
           hugo-version: 'latest'
       - name: Build
         run: hugo --minify
+      - name: Set up SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -p 65002 -H 109.106.250.157 >> ~/.ssh/known_hosts
       - name: Deploy
         env:
           HOSTINGER_USER: ${{ secrets.HOSTINGER_USER }}
-          HOSTINGER_PASS: ${{ secrets.HOSTINGER_PASS }}
         run: |
-          rsync -av --delete public/ $anactualbeing@gmail.com@https://srv1922-files.hstgr.io/b84cd6800851a903/files/public_html/
+          rsync -av -e "ssh -p 65002" --delete public/ $HOSTINGER_USER@109.106.250.157:/home/u277409165/public_html/
