--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,6 +13,25 @@ jobs:
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: 'latest'
+      - name: Update Draft Status
+        run: |
+          current_time=$(date -u +%Y-%m-%dT%H:%M:%S+00:00)
+          for file in content/posts/*.md; do
+            if [ -f "$file" ]; then
+              publish_date=$(grep '^publishDate:' "$file" | cut -d' ' -f2)
+              if [[ ! -z "$publish_date" && "$publish_date" < "$current_time" ]]; then
+                sed -i 's/draft: true/draft: false/' "$file"
+                echo "Updated $file to draft: false"
+              fi
+            fi
+          done
+      - name: Commit Draft Changes
+        run: |
+          git config user.name "GitHub Actions Bot"
+          git config user.email "actions@github.com"
+          git add content/posts/*.md
+          git commit -m "Update draft status for published posts" || echo "No changes to commit"
+          git push origin main || echo "No push needed"
       - name: Build
         run: hugo --minify
       - name: Set up SSH
