--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # Full history for git commits
       - name: Set up Hugo
         uses: peaceiris/actions-hugo@v2
         with:
@@ -40,8 +42,9 @@ jobs:
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -p 65002 -H 109.106.250.157 >> ~/.ssh/known_hosts
+          ssh -p 65002 -v $HOSTINGER_USER@109.106.250.157 || echo "SSH debug output"
       - name: Deploy
         env:
           HOSTINGER_USER: ${{ secrets.HOSTINGER_USER }}
         run: |
-          rsync -av -e "ssh -p 65002" --delete public/ $HOSTINGER_USER@109.106.250.157:/home/u277409165/public_html/
+          rsync -av -e "ssh -p 65002 -v" --delete public/ $HOSTINGER_USER@109.106.250.157:/home/u277409165/public_html/ || echo "Rsync failed"
