--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,14 +3,14 @@ on:
   push:
     branches: [ main ]
   schedule:
-    - cron: '0 * * * *' # Run hourly
+    - cron: '0 * * * *'
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0 # Full history for git commits
+          fetch-depth: 0
       - name: Set up Hugo
         uses: peaceiris/actions-hugo@v2
         with:
@@ -28,12 +28,14 @@ jobs:
             fi
           done
       - name: Commit Draft Changes
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           git config user.name "GitHub Actions Bot"
           git config user.email "actions@github.com"
           git add content/posts/*.md
           git commit -m "Update draft status for published posts" || echo "No changes to commit"
-          git push origin main || echo "No push needed"
+          git push https://$GH_TOKEN@github.com/actualbeing/lanturn.git main || echo "No push needed"
       - name: Build
         run: hugo --minify
       - name: Set up SSH
