--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -45,6 +45,6 @@ jobs:
           username: u277409165.autobot69
           password: ${{ secrets.HOSTINGER_FTP_PASS }}
           local-dir: ./public/
-          server-dir: /home/u277409165/public_html/
+          server-dir: /public_html/
           protocol: ftps
           port: 21
