--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -45,6 +45,8 @@ jobs:
           username: u277409165.autobot69
           password: ${{ secrets.HOSTINGER_FTP_PASS }}
           local-dir: ./public/
-          server-dir: /public_html/
+          server-dir: /
           protocol: ftps
           port: 21
+          log-level: verbose
+          dangerous-clean-slate: true
