--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -45,7 +45,7 @@ jobs:
           username: u277409165.autobot69
           password: ${{ secrets.HOSTINGER_FTP_PASS }}
           local-dir: ./public/
-          server-dir: /
+          server-dir: /public/
           protocol: ftps
           port: 21
           log-level: verbose
