--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -51,7 +51,7 @@ jobs:
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
           server: ftp.lanturnweekly.com
-          username: u277409165
+          username: u2774091650.autobot69
           password: ${{ secrets.HOSTINGER_FTP_PASS }}
           local-dir: ./public/
           server-dir: /
