beating head against wall

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -41,7 +41,7 @@ jobs:
           git config user.email "actions@github.com"
           git add content/posts/*.md
           git commit -m "Update draft status for published posts" || echo "No changes to commit"
-          git push https://$GH_TOKEN@github.com/actualbeing/lanturn.git main || echo "No push needed"
+          git push https://$GH_TOKEN@github.com/actualbeing/lanturn.git main || { echo "Push failed"; exit 1; }
       - name: Build
         run: |
           hugo mod get -u
