--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,6 +21,9 @@ jobs:
         with:
           hugo-version: '0.146.6'
           extended: true
+      - name: Install Hugo Modules
+        run: |
+          hugo mod get -u github.com/adityatelange/hugo-PaperMod
       - name: Update Draft Status
         run: |
           current_time=$(date -u +%Y-%m-%dT%H:%M:%S+00:00)
@@ -42,8 +45,6 @@ jobs:
           git add content/posts/*.md
           git commit -m "Update draft status for published posts" || echo "No changes to commit"
           git push https://$GH_TOKEN@github.com/actualbeing/lanturn.git main || { echo "Push failed"; exit 1; }
-      - name: Install Hugo Modules
-        run: hugo mod get -u
       - name: Build
         run: |
           hugo --minify --logLevel debug || { echo "Build failed"; exit 1; }
@@ -60,3 +61,4 @@ jobs:
           port: 21
           log-level: verbose
           dangerous-clean-slate: true
+          ftp-retry-limit: 3
