--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 baseURL: https://lanturnweekly.com/
-languageCode: en-us
-title: Lanturn Weekly
 theme: PaperMod
 module:
   imports:
     - path: github.com/adityatelange/hugo-PaperMod
+ignoreLogs:
+  - warning-partial-superfluous-prefix
