--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -49,13 +49,12 @@ jobs:
         run: |
           hugo --minify --logLevel debug || { echo "Build failed"; exit 1; }
           ls -R public/posts
-      - name: Deploy
-        uses: appleboy/scp-action@master
+      - name: FTP Deploy
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
-          host: 109.106.250.157
+          server: 109.106.250.157
           username: u2774091650.autobot69
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: 65002
-          source: "public/"
-          target: "/home/u2774091650/public_html"
-          strip_components: 1
+          password: ${{ secrets.FTP_PASSWORD }}
+          port: 21  # Standard FTP port, adjust if needed
+          local-dir: ./public/
+          server-dir: /public_html/
