--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -54,7 +54,7 @@ jobs:
         with:
           server: 109.106.250.157
           username: u2774091650.autobot69
-          password: ${{ secrets.FTP_PASSWORD }}
+          password: ${{ secrets.HOSTINGER_FTP_PASSWORD }}
           port: 21  # Standard FTP port, adjust if needed
           local-dir: ./public/
           server-dir: /public_html/
